--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,16 @@
 
 /* Your CSS Code here. */
+
+/* Your CSS Code here. */
+.container{
+    float: left;
+    width: 20%;
+    margin: 10px;
+
+}
+#card title{
+    background-color: red;
+    margin: 10px;
+    margin-left: 10px;
+    
+}
